fix alignment and coloring

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -14,12 +14,15 @@
 #sign-up {
   color: red;
   font-family: IM Fell English SC;
-  // margin-bottom: 20px;
+  margin: 10rem 0 5rem 0;
+  text-align: center;
+
 }
 
 #sign-in {
   color: red;
   font-family: IM Fell English SC;
+  text-align: center;
 }
 
 body {
@@ -200,7 +203,7 @@ body {
   justify-content: center;
   font-size: 50px;
   color: black;
-  background-color: red;
+  // background-color: red;
   font-family: IM Fell English SC;
   text-shadow: 4px 2px rgba(0, 0, 0, .25);
   font-weight: 900
